添加获取图片序列代码　更改topic名称(图像矫正　深度原始)减少彩色与深度的对齐误差２０２００４０８

--- a/kinect2_viewer/CMakeLists.txt
+++ b/kinect2_viewer/CMakeLists.txt
@@ -76,7 +76,13 @@ target_link_libraries(kinect2_viewer
   ${PCL_LIBRARIES}
   ${kinect2_bridge_LIBRARIES}
 )
-
+add_executable(save_seq src/save_seq.cpp)
+target_link_libraries(save_seq
+  ${catkin_LIBRARIES}
+  ${OpenCV_LIBRARIES}
+  ${PCL_LIBRARIES}
+  ${kinect2_bridge_LIBRARIES}
+)
 #############
 ## Install ##
 #############
